Added confusion matrix

--- a/WineQuality.ipynb
+++ b/WineQuality.ipynb
@@ -1396,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1465,7 +1465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1476,41 +1476,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['2' '1' '2' ... '2' '1' '2']\n",
-      "fixed acidity\n",
-      "7.0    2\n",
-      "7.7    1\n",
-      "6.8    2\n",
-      "6.3    2\n",
-      "7.4    2\n",
-      "      ..\n",
-      "6.1    1\n",
-      "6.7    2\n",
-      "6.5    2\n",
-      "7.6    1\n",
-      "6.6    2\n",
-      "Name: quality_, Length: 1625, dtype: object\n",
       "[372 212 189 852]\n"
      ]
     }
    ],
    "source": [
     "from sklearn.metrics import confusion_matrix\n",
-    "print(y_pred)\n",
-    "print(test_y)\n",
+    "#print(y_pred)\n",
+    "#print(test_y)\n",
     "print(confusion_matrix(test_y,y_pred).ravel())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1530,7 +1516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1539,7 +1525,7 @@
        "LogisticRegression(penalty='none')"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1555,7 +1541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1574,50 +1560,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.46153846 0.64       0.72517321 0.73979985 0.7213241 ]\n"
+      "[0.64477933 0.71767241 0.69396552 0.71982759 0.75646552 0.72952586\n",
+      " 0.73383621]\n"
      ]
     }
    ],
    "source": [
-    "cv_scores = cross_val_score(logreg, scaled_x, y, cv=5)\n",
+    "cv_scores = cross_val_score(logreg, scaled_x, y, cv=7)\n",
     "print(cv_scores)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "LogisticRegression()"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6531954887218046 0.6612749762131304 0.36541889483065954 0.6345811051693404\n"
+     ]
     }
    ],
+   "source": [
+    "tn, fp, fn, tp = confusion_matrix(test_y_logreg,y_pred).ravel()\n",
+    "precision = tp/(tp + fp)\n",
+    "sensitivity = tp/(tp + fn)\n",
+    "specificity = tn/(tn + fn)\n",
+    "false_positive_rate = 1 - specificity\n",
+    "print(precision, sensitivity, specificity, false_positive_rate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# logistic regression model\n",
     "# With penalty\n",
     "train_x_logreg, test_x_logreg, train_y_logreg, test_y_logreg = train_test_split(scaled_x, y, random_state  = 365)\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "logreg = LogisticRegression(solver='lbfgs', max_iter=100, penalty='l2')\n",
-    "logreg.fit(train_x_logreg, train_y_logreg)"
+    "logreg.fit(train_x_logreg, train_y_logreg)\n",
+    "y_pred = logreg.predict(test_x_logreg)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1636,7 +1635,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7810545129579982 0.8315889628924833 0.650197628458498 0.34980237154150196\n"
+     ]
+    }
+   ],
+   "source": [
+    "tn, fp, fn, tp = confusion_matrix(test_y_logreg,y_pred).ravel()\n",
+    "precision = tp/(tp + fp)\n",
+    "sensitivity = tp/(tp + fn)\n",
+    "specificity = tn/(tn + fn)\n",
+    "false_positive_rate = 1 - specificity\n",
+    "print(precision, sensitivity, specificity, false_positive_rate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[329 245 177 874]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import confusion_matrix\n",
+    "#print(y_pred)\n",
+    "#print(test_y)\n",
+    "print(confusion_matrix(test_y_logreg,y_pred).ravel())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1654,10 +1695,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[329 245 177 874]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import confusion_matrix\n",
+    "#print(y_pred)\n",
+    "#print(test_y)\n",
+    "print(confusion_matrix(test_y_logreg,y_pred).ravel())"
+   ]
   }
  ],
  "metadata": {
