New dataset added

--- a/WineQuality.ipynb
+++ b/WineQuality.ipynb
@@ -1518,25 +1518,15 @@
    "cell_type": "code",
    "execution_count": 39,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LogisticRegression(penalty='none')"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# logistic regression model\n",
     "# Without penalty\n",
     "train_x_logreg, test_x_logreg, train_y_logreg, test_y_logreg = train_test_split(scaled_x, y, random_state  = 365)\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "logreg = LogisticRegression(solver='lbfgs', max_iter=100, penalty='none')\n",
-    "logreg.fit(train_x_logreg, train_y_logreg)"
+    "logreg.fit(train_x_logreg, train_y_logreg)\n",
+    "y_pred = logreg.predict(test_x)"
    ]
   },
   {
@@ -1586,7 +1576,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6531954887218046 0.6612749762131304 0.36541889483065954 0.6345811051693404\n"
+      "0.6470588235294118 0.6698382492863939 0.3538175046554935 0.6461824953445066\n"
      ]
     }
    ],
@@ -1609,9 +1599,9 @@
     "# With penalty\n",
     "train_x_logreg, test_x_logreg, train_y_logreg, test_y_logreg = train_test_split(scaled_x, y, random_state  = 365)\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "logreg = LogisticRegression(solver='lbfgs', max_iter=100, penalty='l2')\n",
-    "logreg.fit(train_x_logreg, train_y_logreg)\n",
-    "y_pred = logreg.predict(test_x_logreg)"
+    "logreg_wp = LogisticRegression(solver='lbfgs', max_iter=100, penalty='l2')\n",
+    "logreg_wp.fit(train_x_logreg, train_y_logreg)\n",
+    "y_pred = logreg_wp.predict(test_x_logreg)"
    ]
   },
   {
@@ -1629,8 +1619,8 @@
     }
    ],
    "source": [
-    "print(\"Test set score: {:.2f}\".format(logreg.score(test_x_logreg,test_y_logreg)))\n",
-    "print(\"Training set score: {:.2f}\".format(logreg.score(train_x_logreg, train_y_logreg)))"
+    "print(\"Test set score: {:.2f}\".format(logreg_wp.score(test_x_logreg,test_y_logreg)))\n",
+    "print(\"Training set score: {:.2f}\".format(logreg_wp.score(train_x_logreg, train_y_logreg)))"
    ]
   },
   {
@@ -1684,7 +1674,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.46153846 0.64076923 0.72517321 0.73979985 0.72055427]\n"
+      "[0.46153846 0.64       0.72517321 0.73979985 0.7213241 ]\n"
      ]
     }
    ],
